--- a/CPC152 Project.ipynb
+++ b/CPC152 Project.ipynb
@@ -2,27 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "44e731e1",
+   "execution_count": 3,
+   "id": "ffc1dfac",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1833077286.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    python -m pip install \"jupyter_server>=2.0.0\"\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hii\n"
      ]
     }
    ],
    "source": [
-    "python -m pip install \"jupyter_server>=2.0.0\""
+    "print ('Hii')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be6cd1be",
+   "id": "d3d86c09",
    "metadata": {},
    "outputs": [],
    "source": []
